# nginx-log-analyzer

./: Cargo.toml  README.md  README_CN.md  build.sh
src/: analyzer.rs  config.rs  dateutil.rs  mail_util.rs  main.rs  placeholder.rs
tarball/config/: config.toml
